Update all the files.

--- a/testcasesui/src/charts/chart.scss
+++ b/testcasesui/src/charts/chart.scss
@@ -33,3 +33,8 @@ div.line_tooltip {
 .grid-item {
     text-align: left;
 }
+
+.chart select.dropdown { 
+    padding: 0.5em;
+    align-items: center;
+}
