Almost completed the design

--- a/testcasesui/src/calendar/calendar.scss
+++ b/testcasesui/src/calendar/calendar.scss
@@ -123,3 +123,13 @@ tr {
 .grid-item {
     text-align: left;
 }
+
+.alert-div {
+    margin: 10px 0px 10px 0px;
+}
+
+.alert-msg {
+    border-radius: 5px;
+    padding: 2px 5px;
+    margin-bottom: 2px;
+}
