Minor changes to the design

--- a/testcasesui/src/calendar/calendar.scss
+++ b/testcasesui/src/calendar/calendar.scss
@@ -133,3 +133,8 @@ tr {
     padding: 2px 5px;
     margin-bottom: 2px;
 }
+
+.fields-group label {
+    display: inline;
+    margin-bottom: 0.5rem;
+}
